# jl-hex

./: AAstack_separations  README.md  SLG_vol_calc.jl  alt_group_ops.jl  angle_estimation.jl  angle_test.jl  annotated_plot.jl  basic_plot.jl  bernalstack_separations  complete_symmetry.jl  distortion.jl  find_angle.lyx  find_angle.lyx~  find_angle_bak.lyx  find_angles.jl  group_operations.jl  hex_main.jl  hex_utils.jl  large_lattice.jl  lattice_creation.jl  main.py  moire_patterns.ipynb  moire_plot.py  moire_plot_v2.py  non_overlap_single.jl  non_overlap_sym.jl  notable_radii_aa_stack  pyproject.toml  separation_plot.py  single_lattice_creation.jl  slim_big_lat.jl  slurm.sh  sym_ops.jl  sym_ops.py  symmetry_analysis.jl  test.py  test_magmom.jl  tolerance.jl  unit_cell.jl  very_large_lattice.jl  (+2 more)
.ipynb_checkpoints/: moire_patterns-checkpoint.ipynb  moire_plot-checkpoint.py
old_scripts/: alt_group_ops.jl  angle_variation.jl  basic_graphene_plots.jl  closeup_plot.jl  find_angles.jl  group_operations.jl  just_plot.jl  moire_patterns.ipynb  non_overlap_sym.jl  old_gp_ops.jl  old_point_alignment.jl  plot_go_solo.jl  slim_big_lat.jl  slurm.sh  sym_ops.py  symmetry_analysis.jl  test.py  very_large_lattice.jl  volume_plot.jl
