[project]
name = "jl-hex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.7.2",
    "colorcet>=3.1.0",
    "datashader>=0.17.0",
    "geckodriver>=0.0.1",
    "holoviews>=1.20.2",
    "matplotlib>=3.10.1",
    "pillow>=11.1.0",
    "pyqt5>=5.15.11",
    "selenium>=4.31.0",
    "spglib>=2.6.0",
]
